--- a/frontend/dados-socioeconomicos.html
+++ b/frontend/dados-socioeconomicos.html
@@ -9,8 +9,8 @@
         body { background: #f4f4f4; }
         .container { max-width: 1200px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
         h1 { color: #2d5c2f; margin-bottom: 30px; }
-        table { font-size: 0.98rem; }
-        th, td { vertical-align: middle !important; }
+        table { font-size: 0.88rem; }
+        th, td { padding: 0.3em 0.5em !important; }
         .table-bordered th, .table-bordered td { border: 1px solid #333 !important; }
         .total-row { font-weight: bold; background: #f0f0f0; }
         .existencial { color: #d00; font-weight: bold; }
@@ -27,16 +27,16 @@
             background: linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);
             box-shadow: 0 2px 8px #0002;
             border-radius: 0 0 16px 16px;
-            padding: 0 16px;
-            margin-bottom: 30px;
+            padding: 6px 8px;
+            margin-bottom: 18px;
             border: none;
         }
         .nav-btn {
             flex: 1;
             background: transparent;
             border: none;
-            font-size: 1.15em;
-            padding: 16px 0;
+            font-size: 1em;
+            padding: 10px 0;
             cursor: pointer;
             transition: background 0.2s, color 0.2s, font-weight 0.2s;
             color: #2d5c2f;
@@ -53,6 +53,11 @@
             font-weight: bold;
             border-bottom: 3px solid #007a00;
             outline: none;
+        }
+        .form-control.input-sm, .form-control.input-md, .form-control.input-lg, .form-control.input-xs {
+            min-height: 28px;
+            font-size: 0.92em;
+            padding: 2px 6px;
         }
     </style>
 </head>
@@ -185,7 +190,7 @@
             const page = window.location.pathname.split('/').pop();
             if(page.includes('dados-socioeconomicos')) document.getElementById('btn-dados').classList.add('active');
             if(page.includes('geral')) document.getElementById('btn-geral').classList.add('active');
-            if(page.includes('plano')) document.getElementById('btn-plano').classList.add('active');
+            if(page.includes('plano-de-pagamento')) document.getElementById('btn-plano').classList.add('active');
             if(page.includes('panorama')) document.getElementById('btn-panorama').classList.add('active');
         };
         function limparCampos() {
