--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -124,7 +124,7 @@
 </head>
 <body>
     <div id="custom-navbar">
-        <button onclick="window.location.href='dados-socioeconomicos.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
+        <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
         <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
         <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
         <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
