--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 <div id="custom-navbar">
-  <button type="button" onclick="window.location.href='dados-socioeconomicos.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
+  <button type="button" onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
   <button type="button" onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
   <button type="button" onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
   <button type="button" onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
